<resources>
    <string name="app_name">Controle O.S. ZN</string>

    <string name="title_activity_base">Ordens de Serviço</string>
    <string name="title_activity_consultar_ordem">Pesquisar Ordem de Serviço</string>
    <string name="title_activity_nova_os">Nova Ordem de Serviço</string>
    <string name="title_activity_os">Detalhes Ordem de Serviço</string>
    <string name="title_activity_consultar_cliente">Pesquisar Cliente</string>
    <string name="title_activity_cadastrar_cliente">Cadastrar Novo Cliente</string>
    <string name="title_activity_atualizar_cliente">Atualizar Cadastro do Cliente</string>
    <string name="title_activity_cadastrar_user">Cadastrar Novo Usuario</string>


    <string name="navigation_drawer_open">Abrir Drawer Navegação</string>
    <string name="navigation_drawer_close">Fechar Drawer Navegação</string>

    <string name="cadastrar_cliente">Cadastrar Novo Cliente</string>
    <string name="consultar_cliente">Pesquisar Cliente</string>

    <string name="novo_os">Nova O.S.</string>
    <string name="consulta">Consultar O.S.</string>

    <string name="nav_clientes">Clientes</string>
    <string name="nav_os">Ordens de Serviço</string>
    <string name="nav_opcs">Mais Opções</string>
    <string name="nav_avançado">Cadastrar Usuario</string>
    <string name="nav_logout">Logout do Sistema</string>
    <string name="nav_sair">Fechar App</string>
    <string name="sair">Sair</string>

    <string name="botao_entrar">ENTRAR</string>

    <string name="camposObrigatorios">Campos com * são obrigatorios!</string>
    <string name="campoInforme">Informe o nome do cliente ou parte dele no campo abaixo:</string>
    <string name="campoInformeOS">Informe o numero da O.S. no campo abaixo:</string>
    <string name="campoNOS">Nº O.S.</string>

    <string name="botao_salvarCad">SALVAR</string>
    <string name="login_senha">Senha:</string>
    <string name="login_usuario">Usuario:</string>
    <string name="novo_login">Criar Novo Usuario</string>
    <string name="bairro">Bairro:</string>
    <string name="bairroCadCliente">Bairro:*</string>
    <string name="cpf">CPF:*</string>
    <string name="chave_administrador">Chave Administrador</string>
    <string name="cidade">Cidade:</string>
    <string name="cidadeCadCliente">Cidade:*</string>
    <string name="complemento">Complemento:</string>
    <string name="contato_2">Contato 2:</string>
    <string name="contato">Contato:*</string>
    <string name="email">Email:*</string>
    <string name="emailCadCliente">Email:</string>
    <string name="nome_completo">Nome Completo:*</string>
    <string name="nome">Nome:</string>
    <string name="numero">Nº:</string>
    <string name="numeroCadCliente">Nº:*</string>
    <string name="rua">Rua:</string>
    <string name="ruaCadCliente">Rua:*</string>
    <string name="senha">Senha:*</string>
    <string name="usuario">Usuario:*</string>
    <string name="confirmar_senha">Confirmar Senha:*</string>
    <string name="uf">Estado:</string>
    <string name="ufCadCliente">Estado:*</string>
    <string name="pesquisar_botao">Pesquisar</string>
    <string name="alterar_status_os">alterar status OS</string>
    <string name="novo_acompanhamento">novo acompanhamento</string>
    <string name="cep">CEP:</string>
    <string name="mostrar_senha">Mostrar Senha</string>
    <string name="administrador">Administrador</string>
    <string name="exibir_senha">Exibir Senha</string>
    <string name="endere_o">Endereço:</string>
    <string name="_00_00_0000">00/00/0000</string>
    <string name="data_abertura">Data Abertura:</string>
    <string name="nome_cliente">Nome Cliente:</string>
    <string name="none">None</string>
    <string name="numero_da_o_s">Numero da O.S.:</string>
    <string name="problema_informado">Problema Informado:</string>
    <string name="status">Status:</string>
    <string name="filtrar">Filtrar</string>
    <string name="atualizar">Atualizar</string>
    <string name="o_s_s_aberta_s">O.S.(s) Aberta(s)</string>
    <string name="o_s_s_aguardando_autoriza_o">O.S.(s) Aguardando autorização</string>
    <string name="o_s_s_em_analise">O.S.(s) Em Analise</string>
    <string name="o_s_s_em_reparo">O.S.(s) Em reparo</string>
    <string name="o_s_s_finalizada_s">O.S.(s) Finalizada(s)</string>
    <string name="o_s_s_pronta_s_para_entrega_retirada">O.S.(s) Pronta(s) para Entrega/Retirada</string>
    <string name="o_s_s_com_or_amento_aprovado">O.S.(s) com Orçamento Aprovado</string>
    <string name="vizualiza_o_padrao">Vizualização Padrao</string>
    <string name="atualizar_cadastro">Consultar/Atualizar Cliente</string>
    <string name="data_acompanhamento">Acompanhamento adicionado em: </string>
    <string name="descricao_acompanhamento">Descricao Acompanhamento: </string>
    <string name="_00_00000_0000">(00)00000-0000</string>
    <string name="contatoCard">Contato: </string>
    <string name="cpfNovaOs">CPF: </string>
    <string name="descri_o_do_problema">Descrição do Problema: *</string>
    <string name="endere_o_completo">Endereço Completo:</string>
    <string name="informe_o_nome_do_cliente_min_3_letras">Informe o Nome do cliente (Min. 3 Letras): *</string>
    <string name="informe_os_equipamento_s">Informe o (s) equipamento (s): *</string>
    <string name="nome_completo_novaOs">Nome Completo: </string>
    <string name="ok">Ok</string>
    <string name="aberta_por">Aberta por:</string>
    <string name="acompanhamentos">Acompanhamentos:</string>
    <string name="data_fechamento">Data Fechamento:</string>
    <string name="descri_o_problema">Descrição Problema:</string>
    <string name="equipamento_s">Equipamento(s):</string>
    <string name="valor_final">Valor Final:</string>
    <string name="valor_or_amento">Valor Orçamento:</string>
    <string name="imagem_equipamento">Imagem Equipamento</string>
    <string name="novo_cadastro_nclique_aqui">Novo Cadastro \nClique Aqui!</string>
    <string name="adicionado_por">Adicionado Por:</string>
    <string name="acompanhamento">Acompanhamento:</string>
    <string name="statusaddacomp">Status</string>
    <string name="cadastrar">Cadastrar</string>

    <string-array name="spinner_array">
        <item>MG</item>
        <item>RJ</item>
        <item>SP</item>
        <item>ES</item>
        <item>DF</item>
        <item>MT</item>
        <item>MS</item>
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>GO</item>
        <item>MA</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>

    <string-array name="spinner_status">
        <item>Aberto</item>
        <item>Em Analise</item>
        <item>Aguardando autorização</item>
        <item>Orçamento Aprovado</item>
        <item>Em reparo</item>
        <item>Pronto para Entrega/Retirada</item>
        <item>Finalizado</item>
    </string-array>

</resources>
