<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item
            android:id="@+id/filtro0"
            android:title="@string/o_s_s_aberta_s"/>

        <item
            android:id="@+id/filtro1"
            android:title="@string/o_s_s_em_analise"/>

        <item
            android:id="@+id/filtro2"
            android:title="@string/o_s_s_aguardando_autoriza_o"/>

        <item
            android:id="@+id/filtro3"
            android:title="@string/o_s_s_com_or_amento_aprovado"/>

        <item
            android:id="@+id/filtro4"
            android:title="@string/o_s_s_em_reparo"/>

        <item
            android:id="@+id/filtro5"
            android:title="@string/o_s_s_pronta_s_para_entrega_retirada"/>

        <item
            android:id="@+id/filtro6"
            android:title="@string/o_s_s_finalizada_s"/>

        <item
            android:id="@+id/filtro7"
            android:title="@string/vizualiza_o_padrao"/>

</menu>